--- a/58/css/headWarp.css
+++ b/58/css/headWarp.css
@@ -1,6 +1,7 @@
 #homeWarp{
 	margin: 0 auto;
 	width: 1190px;
+	padding-top: 0;
 	background-color: #fff;
 }
 .header{
@@ -9,7 +10,7 @@
 }
 
 .head_search{
-	margin-top: 20px;
+	margin-top: 0;
 	width: 1190px;
 	position: relative;
 	z-index: 101;
@@ -35,7 +36,7 @@ form{
 .searchbar{
 	 display: block;
 	 position: absolute;
-	 left: 380px;
+	 left: 280px;
 	 top: 10px;
 }
 .searchkey{
@@ -89,6 +90,7 @@ body, dd, dl, dt, h2, h3, h4, h6, li, ol, p, ul {
 	width: 1190px;
 	height: 34px;
 	line-height: 34px;
+	font-size: 16px;
 	margin-top: 10px;
 	border-bottom: 2px solid  #ff552e;
 }
@@ -199,4 +201,184 @@ body, dd, dl, dt, h2, h3, h4, h6, li, ol, p, ul {
 }
 .navcon .ghover a{
 	color: #fff;
+}
+.navcon .navMini{
+	float: right;
+	margin-right: 30px;
+	background-color: #fff;
+	line-height: 34px;
+	height: 34px;
+}
+.navcon .navMini a{
+	color: #ff552e;
+	font-size: 10px;
+	font-weight: 600;
+}
+.navcon .navMini a:hover{
+	text-decoration: underline;
+}
+/* 主体内容部分 */
+.main_warp{
+	overflow: hidden;
+	width: 1190px;
+	margin: 0 auto;
+}
+#main_part .left_side{
+	width: 849px;
+	overflow: hidden;
+	float: left;
+}
+
+.iconNav{
+	background-color: #fff;
+	width: 849px;
+	overflow: hidden;
+	margin-bottom: 10px;
+	height: 122px;
+}
+.iconNav li{
+	float: left;
+	width: 120px;
+	margin-top: 20px;
+	border-left: 1px solid #f8f8f8;
+	text-align: center;
+}
+.iconNav li a:hover{
+	color: #ff552e;
+}
+.iconNav li:first-child{
+	border-left: none;
+}
+.iconNav .icon{
+	width: 100%;
+	height: 64px;
+	font-size: 14px;
+	display: block;
+	text-align: center;
+	color: #000;
+}
+.iconNav li em{
+	line-height: 30px;
+	display: block;
+	height: 28px;
+}
+.iconNav li em a {
+    font-size: 12px;
+    color: #0E8ED8;
+    text-decoration: none;
+    font-style: normal;
+}
+.iconNav li em span {
+    color: #eee;
+	font-style: normal;
+}
+.iconNav .icon i{
+	width: 42px;
+	height: 42px;
+	margin: 0 auto;
+	margin-bottom: 8px;
+	display: block;
+	position: relative;
+	background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 -400px no-repeat;
+}
+#main_part .right_side{
+	width: 330px;
+	overflow: hidden;
+	float: right;
+	position: relative;
+}
+.right_side .right_Top{
+	margin-bottom: 10px;
+	background-color: #fff;
+	position: relative;
+	height: 122px;
+}
+.right_side .fuwudaojia58{
+	width: 300px;
+	margin: 0 auto;
+}
+.right_side .daojia_title{
+	height: 42px;
+	line-height: 42px;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #eee;
+}
+.right_side .daojia_title a{
+	color: #ff552e;
+	font-size: 16px;
+	font-weight: 700;
+}
+.daojia_title ul{
+	float: right;
+	position: relative;
+	top: 18px;
+	right: 0;
+}
+.daojia_title .swipDot li{
+	float: left;
+	width: 12px;
+	height: 12px;
+	margin: 0 3px;
+	cursor: pointer;
+	background: url(../img/minico.png) no-repeat;
+	background-position: 0 -936px;
+}
+.daojia_title .swipDot .active{
+	background-position: 0 -877px;
+}
+
+.daojia_item{
+	display: block;
+	width: 900px;
+	height: 55px;
+	position: relative;
+	left: 0;
+}
+.daojia_item li{
+	width: 62px;
+	height: 54px;
+	float: left;
+}
+.daojia_item li a{
+	display: block;
+	width: 50px;
+	height: 54px;
+	color: #0E8ED8;
+	text-align: center;
+}
+.daojia_item li a:hover{
+	color: #ff552e;
+}
+.daojia_item li a i{
+	background-color: #999;
+	display: block;
+	width: 50px;
+	height: 40px;
+}
+.right_Top .swipeBtn{
+	display: none;
+}
+.swipeBtn .rBtn{
+	position: absolute;
+	top: 43px;
+	right: 0;
+	height: 45px;
+	width: 19px;
+	cursor: pointer;
+	background: url(../img/DaojiaNavIcon.png)-105px -92px no-repeat;
+}
+.swipeBtn .lBtn{
+	position: absolute;
+	top: 43px;
+	left: 0;
+	height: 45px;
+	width: 19px;
+	cursor: pointer;
+	background: url(../img/DaojiaNavIcon.png)0 -92px no-repeat;
+}
+#srbtn.shover {
+	background: url(../img/DaojiaNavIcon.png)-105px -30px no-repeat;
+}
+#slbtn.shover  {
+	background: url(../img/DaojiaNavIcon.png)0px -30px no-repeat;
 }
