--- a/58/css/indexTopbar.css
+++ b/58/css/indexTopbar.css
@@ -1,7 +1,10 @@
 p, body {
     margin: 0;
     padding: 0;
+    background-color: rgb(248, 248, 248);
+    font: 12px/1.2 'Hiragino Sans GB', 'Microsoft YaHei', 微软雅黑, arial, Tahoma, SimSun, sans-serif;
 }
+
 .TopBar{    
 	font: 12px/1.2 "Hiragino Sans GB","Microsoft YaHei","\5FAE\8F6F\96C5\9ED1",arial,Tahoma,SimSun,sans-serif;
 	text-rendering: geometricPrecision;/*text-rendering: auto | optimizeSpeed | optimizeLegibility |  geometricPrecision |  inherit
@@ -16,7 +19,9 @@ p, body {
 	color: #555;
 	border-bottom: 1px solid #141DEA;
 }
-
+#headWarp{
+	margin-bottom: 8px;
+}
 .TopBar a, .TopBar div, .TopBar h1, .TopBar h2, .TopBar h3, .TopBar h4, .TopBar h5, .TopBar h6, .TopBar span, .TopBar p, .TopBar ul, .TopBar li {
     font-family: "Hiragino Sans GB","Microsoft YaHei","\5FAE\8F6F\96C5\9ED1",arial,Tahoma,SimSun,sans-serif!important;
     font-size: 12px;
@@ -199,6 +204,7 @@ body, .TopBar dd, .TopBar dl, .TopBar dt, .TopBar h2, .TopBar h3, .TopBar h4, .T
 	top:36px;
 	right: -1px;
 	display: none;
+	background-color: #fff;
 }
 .hc a{
 	display: block;
